; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_audit.c_audit_log_n_untrustedstring.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_audit.c_audit_log_n_untrustedstring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.audit_buffer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @audit_log_n_untrustedstring(%struct.audit_buffer* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.audit_buffer*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.audit_buffer* %0, %struct.audit_buffer** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = load i64, i64* %6, align 8
  %9 = call i64 @audit_string_contains_control(i8* %7, i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.audit_buffer*, %struct.audit_buffer** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = load i64, i64* %6, align 8
  %15 = call i32 @audit_log_n_hex(%struct.audit_buffer* %12, i8* %13, i64 %14)
  br label %21

16:                                               ; preds = %3
  %17 = load %struct.audit_buffer*, %struct.audit_buffer** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @audit_log_n_string(%struct.audit_buffer* %17, i8* %18, i64 %19)
  br label %21

21:                                               ; preds = %16, %11
  ret void
}

declare dso_local i64 @audit_string_contains_control(i8*, i64) #1

declare dso_local i32 @audit_log_n_hex(%struct.audit_buffer*, i8*, i64) #1

declare dso_local i32 @audit_log_n_string(%struct.audit_buffer*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
